리뷰북 이미지 저장 핸들러 추가

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -468,6 +468,8 @@
             </div>
         </div>
     </div>
+    <!--  리뷰북 작성  -->
+
 
     <button type="button" id="new-review-btn" class="create-btn position-fixed rounded-pill btn btn-outline-primary">
         <i class="bi bi-vector-pen"></i>
