마이페이지 - 리뷰북 생성 폼, api 구현

--- a/src/main/resources/templates/review/editreview.html
+++ b/src/main/resources/templates/review/editreview.html
@@ -110,7 +110,7 @@
                                 <button class="delete-img-btn btn btn-dark rounded-pill opacity-50">
                                     <i class="bi bi-x-lg"></i>
                                 </button>
-                                <img class="preview-img" th:data-file-id="${photo.fileId}" th:src="|@{/api/review-photo/}${photo.filePath}|" style="object-fit: contain"/>
+                                <img class="preview-img" th:data-file-id="${photo.fileId}" th:src="|@{/api/image/review/}${photo.filePath}|" style="object-fit: contain"/>
                             </div>
                         </th:block>
                     </div>
