--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -115,7 +115,7 @@
     #book-cover-wrap {
         background: #333333 ;
         position: relative;
-        height: 10rem;
+        height: 8rem;
         overflow: hidden;
     }
 
@@ -168,11 +168,18 @@
     }
     /* 리뷰북 목록 */
     .review-book-item {
+        cursor: pointer;
+        box-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.1);
         position: relative;
-        width: 100%;
-        height: 20rem;
-        margin-bottom: 3rem;
+        width: 80%;
+        min-width: 720px;
+        aspect-ratio: 3.7;
         overflow: hidden;
+    }
+
+    .review-book-item:hover {
+        width: 81%;
+        transition: width 0.1s linear;
     }
 
     .review-book-item img {
@@ -182,14 +189,15 @@
     }
 
     .review-book-item p {
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-weight: 700;
         position: absolute;
         z-index: 100;
         margin-bottom: 0;
-        bottom: 1rem;
-        right: 1rem;
+        bottom: 10%;
+        right: 5%;
         color: #FFFFFF;
+        transition: all 0.2s linear;
         text-shadow:
                 -1px 0px rgba(0, 0, 0, 0.8),
                 0px 1px rgba(0, 0, 0, 0.8),
@@ -1361,6 +1369,11 @@
         scrollCheck = false;
         firstLoad = true;
         back = false;
+        if(tabType === "REVIEWBOOK"){
+            gallery.css('justify-content', 'center');
+        }else {
+            gallery.css('justify-content', 'flex-start');
+        }
         if([[${findUser.id == loginUser.id}]]){
             $('.create-btn').hide();
             switch (tabType){
@@ -1562,9 +1575,11 @@
                         $(".loader").hide()
                         $.each(reviewBookList, function (index, reviewBook){
                             let coverPath = reviewBook.coverFilePath == null ? '../assets/img/review_book_cover.jpg' : `/api/image/book/${reviewBook.coverFilePath}`;
-                            let tempHtml = '<div class="review-book-item" tabIndex="0" onclick="">' +
+                            let tempHtml = `<div class="review-book-item" tabIndex="0">` +
+                                        `<a href="/book?bookId=${reviewBook.bookId}">` +
                                         `<img src="${coverPath}"/>` +
                                         `<p>${reviewBook.bookTitle}</p>` +
+                                        `</a>`
                                         '</div>';
                             gallery.append(tempHtml).trigger("create")
                         })
