240329 프론트 수정.

--- a/src/main/resources/templates/findPw.html
+++ b/src/main/resources/templates/findPw.html
@@ -50,7 +50,7 @@
 
 <body>
 <!--사이드바-->
-<div class="d-flex flex-nowrap">
+<div class="d-flex ">
     <th:block th:replace="~{fragments/sidebar}"></th:block>
 
     <div class="w3-content w3-container w3-margin-top container position-relative pb-5">
