240329 프론트 수정.

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -118,10 +118,11 @@
         /*    margin-right: auto;*/
         /*}*/
         .container {
-            padding-left: 12px;
-            width: calc(100% - 528px);
-
-            overflow-x: hidden;
+            padding-left: 0px;
+            margin-left: 296px;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
         }
 
         /*card*/
