--- a/src/main/resources/static/assets/css/mypagestyle.css
+++ b/src/main/resources/static/assets/css/mypagestyle.css
@@ -57,10 +57,14 @@ img {
     justify-content: center;
     align-items: center;
     margin-right: 3rem;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .profile-image img {
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .profile-user-settings,
