--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -4,8 +4,6 @@
 
 <!-- 코드언어 표시 == 웹 표준지침 준수 -->
 <head>
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
     <!-- Google fonts-->
@@ -68,13 +66,14 @@
         <div>
         <div class="container editprofilediv">
             <div class="profile-info">
-                <img src="/assets/img/mainimg/daejeon2.jpg" alt="프로필 이미지">
+                <img th:if="${loginUser.profileImg == null}" src="/assets/img/profile.jpg" alt="프로필 이미지">
+                <img th:unless="${loginUser.profileImg == null}" th:src="|@{/api/image/profile/}${loginUser.profileImg}|" alt="프로필 이미지">
                 <div>
                     <p>아이디: <span th:text="${loginUser.id}"></span></p>
                     <p>메일주소: <span th:text="${loginUser.email}"></span></p>
                 </div>
 
-                <input name="uploadFile" type="file" accept="image/gif, image/jpeg, image/png"/>
+                <input id="uploadFile" type="file" accept="image/*"/>
             </div>
 
             <form id="editForm" action="/editProfile" method="post" >
@@ -102,29 +101,35 @@
 
     function saveProfile(){
         console.log("저장 버튼이 클릭되었습니다.");
+        let formData = new FormData();
+
         var id = [[${loginUser.id}]];
         var name = $("#name").val();
         var about = $("#about").val();
-        var data = {
-            id: id,
-            name: name,
-            about: about
-        };
+        var fileInput = $("#uploadFile")[0];
+        var profileImg = fileInput.files[0];
 
-        console.log("전송할 데이터: ", data); // 데이터 확인
+        formData.append("userId", id);
+        formData.append("name", name);
+        formData.append("about", about);
+        if(profileImg != null){
+            formData.append("newProfileImg", profileImg);
+        }
 
         $.ajax({
             url: '/editprofile',
             type: 'POST',
-            data: /*JSON.stringify(data)*/ data,
-            // contentType: "application/json; charset=UTF-8",
-        }).success(res => {
-            alert("프로필 업데이트 성공");
-
-        }).error(error => {
-            alert("프로필 업데이트에 실패했습니다.")
-            console.error(error); // 오류 메시지 출력
-        });
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function () {
+                alert("프로필 업데이트 성공");
+            },
+            error: function (err) {
+                alert("프로필 업데이트에 실패했습니다.")
+                console.error(err); // 오류 메시지 출력
+            }
+        })
     }
 </script>
 </body>
